--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,27 @@
 .main{
-    width: 390px;
-    height: 600px;
+    width: 250px;
+    height: 375px;
     background-color: black;
     border-radius: 20px;
     display: grid;
+
 }
 .inp{
-    width: 390px;
-    height: 100px;
+    width: 250px;
+    height: 75px;
+    font-weight: 600;
 }
 .btn{
-    width: 90px;
-    height: 80px;
+    width: 50px;
+    height: 40px;
     color: aliceblue;
-    border-radius: 50px;
-    font-size: 30px;
+    border-radius: 20px;
+    font-size: 15px;
     
    
 }
 #zero{
-    width: 185px;
+    width: 105px;
     border-radius: 50px;
 
 }
