--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,18 @@
 
 }
 .inp{
-    width: 250px;
-    height: 75px;
+    width: 230px;
+    height: 60px;
     font-weight: 800;
+    margin-top: 15px;
+    margin-left: 8px;
+    border-radius: 10px;
 }
 .btn{
     width: 50px;
     height: 40px;
     color: aliceblue;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 15px;
     
    
